--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
     "pyjwt<3.0.0,>=2.8.0",
     "apscheduler<5.0.0,>=3.11.0",
+    "evalscope>=0.15.1",
 ]
 
 [tool.uv]
