--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "@tanstack/react-query-devtools": "^5.74.9",
     "@tanstack/react-router": "1.19.1",
     "axios": "1.9.0",
+    "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "form-data": "4.0.2",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "7.49.3",
