--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "pyjwt<3.0.0,>=2.8.0",
     "apscheduler<5.0.0,>=3.11.0",
     "evalscope>=0.15.1",
+    "tiktoken>=0.9.0",
+    "omegaconf>=2.3.0",
 ]
 
 [tool.uv]
