--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - .env
     build:
       context: ./backend
+    volumes:
+      - ./evalscope:/app/evalscope
   frontend:
     image: frontend
     restart: always
