--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "axios": "1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "form-data": "4.0.2",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
