✨ 更新 docker-compose.yml 文件
- 为后端和前端服务添加了时区环境变量设置，均设置为 Asia/Shanghai，以确保应用在不同环境下的一致性。
- 这些更改旨在提升服务的可移植性和时间处理的准确性。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       context: ./backend
     volumes:
       - ./evalscope:/app/evalscope
+    environment:
+      - TZ=Asia/Shanghai
   frontend:
     image: frontend
     restart: always
@@ -20,3 +22,5 @@ services:
       context: ./frontend
       args:
         - NODE_ENV=production
+    environment:
+      - TZ=Asia/Shanghai
