--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,6 +40,11 @@ COPY ./app /app/app
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync
 
-RUN echo "10.120.128.159  llm-proxy.miracleplus.com" >> /etc/hosts
+# 创建入口脚本
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# 设置入口点
+ENTRYPOINT ["/entrypoint.sh"]
 
 CMD ["fastapi", "run", "--workers", "1", "app/main.py"]
