--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,4 @@
-name: Docker Image CI
-
+name: Backend Build and Push
 
 on:
   push:
@@ -7,15 +6,6 @@ on:
       - dev
   # 允许手动启用 workflow 的配置
   workflow_dispatch:
-    inputs:
-      deployBranch:
-        description: '部署哪一个分支?'
-        required: true
-        default: 'dev'
-        type: choice
-        options:
-          - dev
-          - main
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -30,9 +20,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with: 
-          # 指定代码分支
-          ref: ${{ inputs.deployBranch }}
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
