✨ 更新 Docker 镜像配置
- 修改 Docker 镜像推送标签，使用环境变量 REGISTRY 和 IMAGE_NAME，确保镜像版本管理更加灵活。
- 新增对最新镜像的标签支持，提升镜像管理的可读性和可维护性。

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,6 +47,7 @@ jobs:
           context: ./backend
           push: true
           tags: |
-            ${{ github.sha }}, 'latest'
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
           platforms: local,linux/amd64,linux/arm64
