--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}.toLowerCase()
+  IMAGE_NAME: ${{ github.repository.lower() }}
 
 jobs:
   build-and-push:
