✨ 更新 Docker 镜像配置
- 修改 IMAGE_NAME 环境变量，使用 toLower() 方法确保镜像名称统一为小写，提升镜像管理的一致性。

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository.lower() }}
+  IMAGE_NAME: ${{ toLower(github.repository) }}
 
 jobs:
   build-and-push:
