✨ Comment out push trigger for dev branch in docker-image.yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,9 @@
 name: Backend Build and Push
 
 on:
-  push:
-    branches:
-      - dev
+#  push:
+#    branches:
+#      - dev
   # 允许手动启用 workflow 的配置
   workflow_dispatch:
 env:
